# siesta

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  README.md  agentic-quickstart-handoff.md  pyproject.toml  system-architecture.md
.claude/skills/agentic-exploration/: SKILL.md  doc-hierarchy.md
.claude/skills/agentic-exploration/references/: agent.md  doc-hierarchy.md  human.md
.claude/skills/agentic-exploration/templates/: notes-template.md  plan-template.md  research-plan-template.md  todo-template.md
.claude/skills/agentic-research/: SKILL.md
.claude/skills/github-issue-workflow/: SKILL.md
.cursor/skills/github-issue-workflow/: SKILL.md
.github/ISSUE_TEMPLATE/: agent-todo.yml
.github/workflows/: test.yml
.skills/github-issue-workflow/: SKILL.md
docs/adr/: 0001-prompt-first-command-execution.md  0002-cli-package-modularization.md  0003-pat-full-display-confirmation.md  0003-secret-handling-policy.md  0004-cross-provider-agent-assets.md  0005-nested-agent-asset-operations.md  0006-conflict-resolution-in-prompt-collection-phase.md  0007-unified-conflict-resolution-seam.md
docs/source/: about.rst  index.rst
docs/source/_templates/autoapi/: index.rst
docs/source/guide/: example.rst  github.rst  index.rst  ruff.rst  write-docstrings.rst  write-documentation.rst
src/siesta/: __init__.py  cli.py  completions.py  dependencies.json  logger.py  precommits.yaml
src/siesta/agents_assets/: quickstart.yaml
src/siesta/agents_assets/constitutions/entalpic-default/: AGENTS.md
src/siesta/agents_assets/rules/: mirror-providers.mdc  python-docstrings.mdc
src/siesta/boilerplate/agentic-exploration/: SKILL.md
src/siesta/boilerplate/agentic-exploration/references/: human.md
src/siesta/boilerplate/agentic-exploration/templates/: plan-template.md
src/siesta/boilerplate/source/: about.rst  conf.py  index.rst
src/siesta/cli/: __init__.py  _shared.py  agents_app.py  docs_app.py  main_app.py  project_app.py  self_app.py
src/siesta/skills/agentic-exploration/: SKILL.md  doc-hierarchy.md
src/siesta/skills/agentic-exploration/references/: agent.md  human.md
src/siesta/skills/agentic-exploration/templates/: handoff-template.md  plan-template.md  (+2 more)
src/siesta/utils/: agentic.py  agents.py  common.py  config.py  conflicts.py  docs.py  github.py  project.py  self.py  tree.py
tests/: conftest.py  test_logger.py
tests/test_cli/: test_add_skill.py  test_agents_app.py  test_build_docs.py  test_cli_package.py  test_help_docs.py  test_init_docs.py  test_open_docs.py  test_quickstart_project.py  test_self.py  test_set_github_pat.py  test_setup_tests.py  test_show_deps.py  test_show_github_pat.py  test_tab_completions.py  test_update_docs.py  test_watch_docs.py
tests/test_utils/: test_agentic_utils.py  test_agents.py  test_conflicts.py  test_project_utils.py  test_tree_utils.py
(+1 files in other folders)
