[project]
name = "siesta"
version = "1.2.0"
description = "Entalpic's Development Guidelines & Docs CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.9.4",
    "cyclopts>=4.4.5",
    "pygithub>=2.5.0",
    "keyring>=25.5.0",
    "ruamel-yaml>=0.18.6",
    "watchdog>=6.0.0",
    "gitignore-parser>=0.1.13",
    "packaging>=24.0",
    "platformdirs>=4.0.0",
    "questionary==2.1.1",
]

[project.scripts]
siesta = "siesta.cli.main_app:main"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.28.0",
    "matplotlib>=3.10.6",
    "myst-parser>=4.0.1",
    "pre-commit>=4.0.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
    "shibuya>=2024.10.15",
    "sphinx-autoapi>=3.3.2",
    "sphinx-autodoc-typehints>=2.5.0",
    "sphinx-code-include>=1.4.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-math-dollar>=1.2.1",
    "sphinxawesome-theme>=5.3.2",
    "sphinxext-opengraph>=0.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Hatchling includes all files under src/siesta/ (not just .py), so the
# bundled skill markdown assets under src/siesta/skills/ are included in
# the wheel without explicit package-data configuration.
packages = ["src/siesta"]

[tool.hatch.build.targets.sdist]
include = ["src/boilerplate/*"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
docstring-code-format = true
